--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   spider: ^2.2.2
+  flutter_secure_storage: ^4.1.0
 
 dev_dependencies:
   flutter_test:
