--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,9 @@ analyzer:
   strong-mode:
    implicit-casts: false
    implicit-dynamic: false
+  
+  exclude:
+   - '**/*.g.dart'
 
 linter:
   # The lint rules applied to this project can be customized in the
